--- a/slidersample.html
+++ b/slidersample.html
@@ -1,94 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Slider Design | X-Dev</title>
-        <link rel="stylesheet" href="slidersample.css" />
-        <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-            integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-            crossorigin="anonymous" referrerpolicy="no-referrer" />
-    </head>
-    <body>
-        <!--Font Awesome CDN-->
-
-        <div class="container">
-
-            <div class="slide">
-
-                <div class="item"
-                    style="background-image: url(https://i.ibb.co/qCkd9jS/img1.jpg);">
-                    <div class="content">
-                        <div class="name">Switzerland</div>
-                        <div class="des">X-Dev, Transforming code into visual poetry..!</div>
-                        <button>See More</button>
-                    </div>
-                </div>
-                <div class="item"
-                    style="background-image: url(https://i.ibb.co/jrRb11q/img2.jpg);">
-                    <div class="content">
-                        <div class="name">Finland</div>
-                        <div class="des">X-Dev, Transforming code into visual poetry..!</div>
-                        <button>See More</button>
-                    </div>
-                </div>
-                <div class="item"
-                    style="background-image: url(https://i.ibb.co/NSwVv8D/img3.jpg);">
-                    <div class="content">
-                        <div class="name">Iceland</div>
-                        <div class="des">X-Dev, Transforming code into visual poetry..!</div>
-                        <button>See More</button>
-                    </div>
-                </div>
-                <div class="item"
-                    style="background-image: url(https://i.ibb.co/Bq4Q0M8/img4.jpg);">
-                    <div class="content">
-                        <div class="name">Australia</div>
-                        <div class="des">X-Dev, Transforming code into visual poetry..!</div>
-                        <button>See More</button>
-                    </div>
-                </div>
-                <div class="item"
-                    style="background-image: url(https://i.ibb.co/jTQfmTq/img5.jpg);">
-                    <div class="content">
-                        <div class="name">Netherland</div>
-                        <div class="des">X-Dev, Transforming code into visual poetry..!</div>
-                        <button>See More</button>
-                    </div>
-                </div>
-                <div class="item"
-                    style="background-image: url(https://i.ibb.co/RNkk6L0/img6.jpg);">
-                    <div class="content">
-                        <div class="name">Ireland</div>
-                        <div class="des">X-Dev, Transforming code into visual poetry..! </div>
-                        <button>See More</button>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="button">
-                <button class="prev"><i
-                        class="fa-solid fa-arrow-left"></i></button>
-                <button class="next"><i
-                        class="fa-solid fa-arrow-right"></i></button>
-            </div>
-
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Image and Text Layout</title>
+</head>
+<body>
+    <div class="container">
+        <div class="images">
+            <div class="shape"></div>
+            <img src="Image/about_img1.jpg" alt="Image 1">
+            <img src="Image/about_img2.jpg" alt="Image 2">
         </div>
-                <script>
-        let next = document.querySelector('.next')
-        let prev = document.querySelector('.prev')
-
-        next.addEventListener('click', function(){
-            let items = document.querySelectorAll('.item')
-            document.querySelector('.slide').appendChild(items[0])
-        })
-
-        prev.addEventListener('click', function(){
-            let items = document.querySelectorAll('.item')
-            document.querySelector('.slide').prepend(items[items.length - 1]) // here the length of items = 6
-        })
-        </script>
-    </body>
+        <div class="text-section">
+            <h1>Your Text Here</h1>
+            <p>This is a sample text section on the right side of the images.</p>
+        </div>
+    </div>
+</body>
 </html>
