--- a/HistoryPage.html
+++ b/HistoryPage.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>History</title>
     <link rel="stylesheet" href="HistoryPage.css">
+    <link rel="stylesheet" href="1400,1100_responsive.css">
+    <link rel="stylesheet" href="1024_responsive.css">
+    <link rel="stylesheet" href="375_responsive.css">
 </head>
 <body>
     <div class="wrapper">
