--- a/NewsPage.html
+++ b/NewsPage.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News</title>
     <link rel="stylesheet" href="NewsPage.css">
+    <link rel="stylesheet" href="1400,1100_responsive.css">
+    <link rel="stylesheet" href="1024_responsive.css">
+    <link rel="stylesheet" href="375_responsive.css">
 </head>
 <body>
 
@@ -20,21 +23,46 @@
         **************************************************************
         -->
 
-        <div id="home" class="nav-section">
-            <div class="nav-title">
-                <h1>Malitbog</h1>
-            </div>
-        
-            <nav class="desktop-nav">
-                <ul>
-                    <li><a href="Dashboard.html">Home</a></li>
-                    <li><a href="NewsPage.html">News</a></li>
-                    <li><a href="AboutPage.html">About</a></li>
-                    <li><a href="TourismPage.html">Tourism</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
+        <!-- Navigation Section -->
+    <div id="home" class="nav-section">
+    <div class="nav-title">
+      <h1>Malitbog</h1>
+    </div>
+  
+    <!-- Burger Menu Icon (Using Image) -->
+    <div class="burger-menu" onclick="toggleMenu()">
+      <img src="Image/toggle-menu.png" alt="Toggle Menu">
+    </div>
+  
+    <!-- Desktop Navigation -->
+    <nav class="desktop-nav">
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#news">News</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#tourism">Tourism</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  
+    <!-- Mobile Navigation -->
+    <nav class="mobile-nav">
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#news">News</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#tourism">Tourism</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
+  
+  <script>
+    function toggleMenu() {
+      const mobileNav = document.querySelector(".mobile-nav");
+      mobileNav.classList.toggle("active");
+    }
+  </script>
         
         <script>
             document.querySelectorAll('.desktop-nav a').forEach(anchor => {
