--- a/TourismPage.html
+++ b/TourismPage.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tourism</title>
     <link rel="stylesheet" href="TourismPage.css">
+    <link rel="stylesheet" href="1400,1100_responsive.css">
+    <link rel="stylesheet" href="1024_responsive.css">
+    <link rel="stylesheet" href="375_responsive.css">
 </head>
 <body>
     <div class="wrapper">
